tests/valid/edge_cases/long_identifiers.fig
// Edge case: very long identifier name
func setup_long() -> ok
    let a_very_long_variable_name_that_goes_on_and_on_and_on = 42
    pass

func a_very_long_function_name_that_is_quite_descriptive(a_very_long_parameter_name: i32) -> i32
    return a_very_long_parameter_name
